# aerospike-client-rust

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  appveyor.yml  build.rs
.cargo/: config.toml
.github/workflows/: aerospike.conf  build.yml
.travis/: aerospike.conf  start_cluster.sh
aerospike-core/: Cargo.toml  README.md
aerospike-core/src/: bin.rs  client.rs  common.rs  errors.rs  key.rs  lib.rs  privilege.rs  privilege_code.rs  record.rs  result_code.rs  role.rs  traits.rs  txn.rs  txn_monitor.rs  txn_roll.rs  user.rs  value.rs
aerospike-core/src/batch/: batch_executor.rs  batch_read.rs  batch_record.rs  mod.rs
aerospike-core/src/cluster/: histogram.rs  metrics.rs  mod.rs  node.rs  node_validator.rs  partition.rs  partition_tokenizer.rs  partitions.rs  peers.rs  peers_parser.rs  version_parser.rs
aerospike-core/src/commands/: admin_command.rs  batch_attr.rs  batch_operate_command.rs  batch_read_command.rs  buffer.rs  delete_command.rs  execute_udf_command.rs  exists_command.rs  field_type.rs  info_command.rs  mod.rs  operate_command.rs  particle_type.rs  query_command.rs  read_command.rs  scan_command.rs  server_command.rs  single_command.rs  stream_command.rs  touch_command.rs  txn_add_keys_command.rs  txn_close_command.rs  txn_mark_roll_forward_command.rs  txn_roll_command.rs  txn_verify_command.rs  write_command.rs
aerospike-core/src/derive/: mod.rs  readable.rs  writable.rs
aerospike-core/src/expressions/: bitwise.rs  hll.rs  lists.rs  maps.rs  mod.rs  regex_flag.rs
aerospike-core/src/msgpack/: decoder.rs  encoder.rs  mod.rs
aerospike-core/src/net/: connection.rs  connection_pool.rs  host.rs  mod.rs  parser.rs
aerospike-core/src/operations/: bitwise.rs  cdt.rs  cdt_context.rs  exp.rs  hll.rs  lists.rs  maps.rs  mod.rs  path.rs  scalar.rs
aerospike-core/src/policy/: admin_policy.rs  batch_policy.rs  client_policy.rs  commit_level.rs  concurrency.rs  consistency_level.rs  expiration.rs  generation_policy.rs  metrics_policy.rs  mod.rs  priority.rs  query_duration.rs  query_policy.rs  read_mode_ap.rs  read_mode_sc.rs  read_policy.rs  read_touch_ttl_percent.rs  record_exists_action.rs  scan_policy.rs  stream_policy.rs  write_policy.rs
aerospike-core/src/query/: filter.rs  index_types.rs  mod.rs  node_partitions.rs  partition_filter.rs  partition_status.rs  partition_tracker.rs  recordset.rs  semantic_sync.rs  statement.rs  udf.rs
aerospike-core/src/task/: drop_index_task.rs  execute_task.rs  index_task.rs  mod.rs  register_task.rs  task.rs  udf_remove_task.rs
aerospike-macro/: Cargo.toml  README.md
aerospike-macro/src/: lib.rs
aerospike-macro/src/traits/: mod.rs  readable.rs  writable.rs
aerospike-rt/: Cargo.toml  README.md
aerospike-rt/src/: lib.rs
aerospike-sync/: Cargo.toml  README.md
aerospike-sync/src/: client.rs  lib.rs
benches/: client_server.rs
benches/common1/: mod.rs
examples/: README.md  batch_operations.rs  crud.rs  crud_sync.rs  query.rs  timeout_configuration.rs
src/: aerospike_record.rs  bin.rs  client.rs  errors.rs  key.rs  lib.rs  pool.rs  record.rs  result_code.rs  user.rs  value.rs
src/batch/: batch_executor.rs  batch_read.rs  mod.rs
src/client/: client.rs  mod.rs  result_code.rs
src/cluster/: cluster.rs  mod.rs  node.rs  node_validator.rs  partition.rs  partition_tokenizer.rs  peers.rs
src/command/: admin_command.rs  buffer.rs  command.rs  delete_command.rs  execute_udf_command.rs  exists_command.rs  field_type.rs  info_command.rs  mod.rs  operate_command.rs  query_command.rs  read_command.rs  read_header_command.rs  scan_command.rs  single_command.rs  stream_command.rs  touch_command.rs  write_command.rs
src/commands/: admin_command.rs  batch_read_command.rs  buffer.rs  delete_command.rs  execute_udf_command.rs  exists_command.rs  field_type.rs  index_types.rs  info_command.rs  mod.rs  operate_command.rs  particle_type.rs  query_command.rs  read_command.rs  read_header_command.rs  scan_command.rs  single_command.rs  stream_command.rs  touch_command.rs  write_command.rs
src/common/: bin.rs  collection_index_type.rs  field_type.rs  filter.rs  index_type.rs  key.rs  mod.rs  operation.rs  operation_cdt_list.rs  operation_cdt_map.rs  particle_type.rs  record.rs  recordset.rs  statement.rs  ttl.rs  udf_lang.rs  user.rs
src/error/: error.rs  mod.rs  result_code.rs
src/exp/: bit_exp.rs  exp.rs  hll_exp.rs  list_exp.rs  map_exp.rs  mod.rs
src/expressions/: bitwise.rs  hll.rs  lists.rs  maps.rs  mod.rs  regex_flag.rs
src/internal/: mod.rs  wait_group.rs
src/msgpack/: decoder.rs  encoder.rs  mod.rs
src/net/: connection.rs  connection_pool.rs  host.rs  mod.rs  parser.rs
src/operations/: bitwise.rs  cdt.rs  cdt_context.rs  exp.rs  expression.rs  hll.rs  lists.rs  maps.rs  mod.rs  scalar.rs
src/policy/: admin_policy.rs  batch_policy.rs  client_policy.rs  commit_level.rs  concurrency.rs  consistency_level.rs  expiration.rs  generation_policy.rs  mod.rs  policy.rs  priority.rs  query_policy.rs  read_policy.rs  record_exists_action.rs  scan_policy.rs  write_policy.rs
src/query/: filter.rs  index_task.rs  index_types.rs  mod.rs  predexp.rs  recordset.rs  regex_flag.rs  statement.rs  udf.rs
src/task/: index_task.rs  mod.rs  register_task.rs  task.rs
src/value/: mod.rs  value.rs
tests/: client.rs  kv.rs  lib.rs  skeptic.rs
tests/common/: mod.rs
tests/proptest_async/: README.md  mod.rs
tests/proptests/: batch_operation.rs  batches.rs  batches_spam.rs  bins.rs  cdt_lists.rs  filter_expression.rs  key.rs  kv.rs  mod.rs  operation.rs  operations.rs  partition_filter.rs  policy.rs  queries.rs  scans.rs  value.rs
tests/src/: admin.rs  backoff.rs  batch.rs  cdt_bitwise.rs  cdt_list.rs  cdt_map.rs  cleanup.rs  cluster.rs  compression.rs  connection_seed.rs  derive.rs  dt_bridge_replacement_loop.rs  (+20 more)
tools/benchmark/: Cargo.toml  README.md
tools/benchmark/src/: args.rs  batch_ops.rs  cli.rs  counters.rs  db_object_spec.rs  generator.rs  main.rs  percent.rs  reporter.rs  stats.rs  tasks.rs  util.rs  workers.rs  workload.rs
(+8 files in other folders)
