[package]
name = "aerospike"
version = "1.2.0"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust"
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

exclude = [
    ".travis.yml",
    ".travis/*",
    ".appveyor.yml",
]

[badges]
travis-ci = { repository = "aerospike/aerospike-client-rust" }
appveyor = { repository = "aerospike/aerospike-client-rust" }

[dependencies]
aerospike-core = {path = "./aerospike-core", optional = true}
aerospike-sync = {path = "./aerospike-sync", optional = true}
aerospike-macro = {path = "./aerospike-macro", optional = true}

[features]
default = ["async", "serialization"]
serialization = ["aerospike-core/serialization"]
async = ["aerospike-core"]
sync = ["aerospike-sync"]
rt-tokio = ["aerospike-core/rt-tokio", "aerospike-macro/rt-tokio"]
rt-async-std = ["aerospike-core/rt-async-std", "aerospike-macro/rt-async-std"]

[[bench]]
name = "client_server"
harness = false

[workspace]
members = ["tools/benchmark", "aerospike-core", "aerospike-rt", "aerospike-sync", "aerospike-macro"]

[dev-dependencies]
env_logger = "0.7"
hex = "0.4"
bencher = "0.1"
serde_json = "1.0"
rand = "0.7"
lazy_static = "1.4"
aerospike-macro = {path = "./aerospike-macro"}
aerospike-rt = {path = "./aerospike-rt"}
futures = {version = "0.3.16" }
tokio = { version = "1.10.0", features = ["full"] }
