[package]
name = "aerospike"
version = "1.2.0"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust"
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

exclude = [
    ".travis.yml",
    ".travis/*",
    ".appveyor.yml",
]

[badges]
travis-ci = { repository = "aerospike/aerospike-client-rust" }
appveyor = { repository = "aerospike/aerospike-client-rust" }

[dependencies]
log = "0.4"
byteorder = "1.3"
ripemd = "0.1"
base64 = "0.13"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
rand = "0.8"
lazy_static = "1.4"
error-chain = "0.12"
parking_lot = "0.12"
pwhash = "1.0"
variance = "0.1"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serialization = ["serde"]

[dev-dependencies]
env_logger = "0.9"
hex = "0.4"
bencher = "0.1"
serde_json = "1.0"

[[bench]]
name = "client_server"
harness = false

[workspace]
members = ["tools/benchmark"]
