[package]
name = "aerospike"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

exclude = [
    ".travis.yml",
    ".travis/*",
    ".appveyor.yml",
]

[workspace.package]
version = "2.0.0-alpha.10"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
license = "Apache-2.0"
description = "Aerospike Client for Rust"
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
readme = "README.md"

[badges]
travis-ci = { repository = "aerospike/aerospike-client-rust" }
appveyor = { repository = "aerospike/aerospike-client-rust" }

[dependencies]
aerospike-core = {path = "aerospike-core", optional = true, version = "2.0.0-alpha.10"}
aerospike-sync = {path = "aerospike-sync", optional = true, version = "2.0.0-alpha.10"}
aerospike-macro = {path = "aerospike-macro", optional = true, version = "2.0.0-alpha.10"}

[features]
default = ["async", "serialization", "rt-tokio", "tls"]
serialization = ["aerospike-core/serialization"]
async = ["aerospike-core"]
sync = ["aerospike-sync"]
rt-tokio = ["aerospike-core/rt-tokio", "aerospike-macro/rt-tokio"]
rt-async-std = ["aerospike-core/rt-async-std", "aerospike-macro/rt-async-std"]
tls = ["aerospike-core/tls", "aerospike-rt/tls"]

[[bench]]
name = "client_server"
harness = false

[workspace]
members = ["tools/benchmark", "aerospike-core", "aerospike-rt", "aerospike-sync", "aerospike-macro"]

[dev-dependencies]
log = "0.4.29"
env_logger = "0.11.8"
hex = "0.4"
bencher = "0.1"
serde_json = "1.0"
rand = "0.7"
lazy_static = "1.4"
ripemd = "0.1"
aerospike-macro = {path = "./aerospike-macro"}
aerospike-rt = {path = "./aerospike-rt"}
futures = {version = "0.3.16" }
tokio = { version = "1.48.0", features = ["full"] }
proptest = "1.6.0"
tokio-rustls = {version = "0.26.0"}
rustls = {version = "0.23.31"}
webpki-roots = "1"
#console-subscriber = "0.1.5"