[package]
name = "aerospike-core"
version = "2.0.0-alpha.4"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust Core Crate. Not meant to be used independently."
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
byteorder = "1.3"
ripemd = "0.1"
base64 = "0.13"
crossbeam-queue = "0.3"
rand = "0.8"
lazy_static = "1.4"
thiserror = "1.0.40"
pwhash = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
aerospike-rt = {path = "../aerospike-rt", version = "2.0.0-alpha.4"}
futures = {version = "0.3.16" }
async-trait = "0.1.51"
rhexdump = "0.2.0"

[features]
serialization = ["serde"]
rt-tokio = ["aerospike-rt/rt-tokio"]
rt-async-std = ["aerospike-rt/rt-async-std"]

[dev-dependencies]
env_logger = "0.9"
hex = "0.4"
bencher = "0.1"
serde_json = "1.0"
aerospike = {path = "../"}
