[package]
name = "aerospike-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
byteorder = "1.3"
ripemd = "0.1"
base64 = "0.13"
rand = "0.8"
lazy_static = "1.4"
thiserror = "1.0.40"
pwhash = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
aerospike-rt = { path = "../aerospike-rt", version = "2.0.0-alpha.10" }
futures = { version = "0.3.16" }
async-trait = "0.1.51"
rhexdump = "0.2.0"
regex = "1"
tokio-rustls = { version = "0.26.0", optional = true }
rustls = { version = "0.23.31", optional = true }
async-channel = "2.5.0"
hazarc = "0.2.0"

[features]
serialization = ["serde"]
rt-tokio = ["aerospike-rt/rt-tokio"]
rt-async-std = ["aerospike-rt/rt-async-std"]
tls = ["rustls", "tokio-rustls"]
sync = []

[dev-dependencies]
env_logger = "0.9"
hex = "0.4"
bencher = "0.1"
serde_json = "1.0"
aerospike = { path = "../" }
aerospike-macro = {path = "../aerospike-macro"}
lazy_static = "1.4"
tokio = { version = "1.48.0", features = ["full"] }
