[package]
name = "aerospike-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
byteorder = "1.5"
ripemd = "0.2"
base64 = "0.22"
rand = "0.10"
lazy_static = "1.5"
thiserror = "2.0.18"
pwhash = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
aerospike-rt = { path = "../aerospike-rt", version = "2.1.0" }
futures = { version = "0.3.32" }
async-trait = "0.1.89"
rhexdump = "0.2.0"
flate2 = "1"
regex = "1"
tokio-rustls = { version = "0.26.4", optional = true }
rustls = { version = "0.23.40", optional = true }
async-channel = "2.5.0"
hazarc = "0.2.0"

[features]
serialization = ["serde"]
rt-tokio = ["aerospike-rt/rt-tokio"]
rt-async-std = ["aerospike-rt/rt-async-std"]
tls = ["rustls", "tokio-rustls"]
sync = []

[dev-dependencies]
env_logger = "0.11"
hex = "0.4"
bencher = "0.1"
serde_json = "1.0"
# Used only by doc-tests inside `aerospike-core` (`use aerospike::…` in
# rustdoc snippets). Strip default features so testing this crate under
# `rt-async-std` doesn't transitively re-enable `rt-tokio` via the umbrella's
# defaults — that conflict makes `aerospike-rt` fail to compile with
# duplicate `fs` / `io` / `Mutex` / … re-exports. Re-enable just `async`
# so the umbrella's own `compile_error!` for "select a client version" is
# satisfied; the runtime flag flows through whatever is set on
# `aerospike-core` itself.
aerospike = { path = "../", default-features = false, features = ["async"] }
aerospike-macro = {path = "../aerospike-macro"}
lazy_static = "1.5"
tokio = { version = "1.52.1", features = ["full"] }
webpki-roots = "1"
