[package]
name = "aerospike-macro"
version = "2.0.0-alpha.2"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust Macros Crate. Not meant to be used independently."
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.28"
syn = {version = "2.0.98", default-features = false, features = ["full"]}
quote = {version = "1.0.6"}
aerospike-rt = {path = "../aerospike-rt", version = "2.0.0-alpha.2"}

[features]
rt-tokio = ["aerospike-rt/rt-tokio"]
rt-async-std = ["aerospike-rt/rt-async-std"]

[build-dependencies]
syn = "2.0.98"
