[package]
name = "aerospike-macro"
description = "Aerospike Client for Rust Macros Crate. Not meant to be used independently."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.28"
syn = {version = "2.0.98", default-features = false, features = ["full"]}
quote = {version = "1.0.6"}
aerospike-rt = {path = "../aerospike-rt", version = "2.0.0-alpha.7"}

[features]
rt-tokio = ["aerospike-rt/rt-tokio"]
rt-async-std = ["aerospike-rt/rt-async-std"]

[build-dependencies]
syn = "2.0.98"
