[package]
name = "aerospike-rt"
version = "2.0.0-alpha.2"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust Runtime Crate. Not meant to be used independently."
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["fs", "net", "rt", "rt-multi-thread", "time", "io-util", "sync"], optional = true }
async-std = {version = "1.9.0", optional = true}

[features]
rt-tokio = ["tokio"]
rt-async-std = ["async-std"]
