[package]
name = "aerospike-rt"
description = "Aerospike Client for Rust Runtime Crate. Not meant to be used independently."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "net", "rt", "rt-multi-thread", "time", "io-util", "sync"], optional = true }
async-std = {version = "1.13.0", optional = true}
async-lock = { version = "3.4.1", optional = true}

[features]
rt-tokio = ["tokio"]
rt-async-std = ["async-std", "async-lock"]
tls = []
