[package]
name = "aerospike-sync"
version = "2.0.0-alpha.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerospike-core = {path = "../aerospike-core"}
futures = {version = "0.3.16" }

[features]
rt-tokio = ["aerospike-core/rt-tokio"]
rt-async-std = ["aerospike-core/rt-async-std"]

[dev-dependencies]
aerospike = {path = "../"}