[package]
name = "aerospike-sync"
version = "2.0.0-alpha.5"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust Sync Crate."
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerospike-core = {path = "../aerospike-core", version = "2.0.0-alpha.5"}
futures = {version = "0.3.16" }

[features]
rt-tokio = ["aerospike-core/rt-tokio"]
rt-async-std = ["aerospike-core/rt-async-std"]

[dev-dependencies]
aerospike = {path = "../"}