[package]
name = "aerospike-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerospike-core = {path = "../aerospike-core", version = "2.0.0-alpha.8", features = ["sync"]}
futures = {version = "0.3.16" }

[features]
rt-tokio = ["aerospike-core/rt-tokio"]
rt-async-std = ["aerospike-core/rt-async-std"]

[dev-dependencies]
aerospike = {path = "../"}