[package]
name = "aerospike-client-rust-benchmark"
version = "0.1.0"
description = "Benchmark suite for the Aerospike Rust client"
authors = ["Jan Hecking <jhecking@netgaroo.com>"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
license = "Apache-2.0"

[dependencies]
clap = "4.0"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4"
num_cpus = "1.11"
rand = "0.8"
aerospike = { path = "../.." }
futures = {version = "0.3.16" }

[[bin]]
path = "src/main.rs"
name = "benchmark"
