[package]
name = "aerospike-client-rust-benchmark"
version = "0.1.0"
description = "Benchmark suite for the Aerospike Rust client"
authors = ["Jan Hecking <jhecking@netgaroo.com>"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.33"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4"
rand = { version = "0.8", features = ["getrandom"] }
aerospike = { path = "../.." }
# Minimal features to reduce Tokio task heap and binary size (no fs, process, signal, etc.)
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }

[[bin]]
path = "src/main.rs"
name = "benchmark"
